[gd_scene load_steps=11 format=3 uid="uid://4jckmklwusca"]

[ext_resource type="Script" path="res://source/ui/settings_screen.gd" id="1_3gh3u"]
[ext_resource type="Texture2D" uid="uid://8glifn4havtt" path="res://assets/ui/controls/button.png" id="2_28xed"]
[ext_resource type="Texture2D" uid="uid://s8a470pskcxj" path="res://assets/ui/controls/button_hover.png" id="3_papfo"]
[ext_resource type="FontFile" uid="uid://dy3sgyh8lpdux" path="res://assets/fonts/Asap_Condensed-ExtraBold.ttf" id="4_nhbkk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2x30j"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="LabelSettings" id="LabelSettings_p03o4"]
font = ExtResource("4_nhbkk")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_fmr27"]
font = ExtResource("4_nhbkk")
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1tras"]
content_margin_left = 4.0
bg_color = Color(0.901961, 0.901961, 0.901961, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s4d31"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0hhht"]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3gh3u")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 112.0
offset_top = 63.0
offset_right = -112.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2x30j")

[node name="CloseButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 46.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_28xed")
texture_hover = ExtResource("3_papfo")
stretch_mode = 0

[node name="SettingsLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 53.0
offset_right = 20.0
offset_bottom = 76.0
grow_horizontal = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_p03o4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolume" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 74.0
offset_top = 192.0
offset_right = 374.0
offset_bottom = 222.0
text = "Music Volume"
label_settings = SubResource("LabelSettings_fmr27")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/MusicVolume"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 217.0
offset_top = -8.0
offset_right = 419.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 10
max_value = 1.0
step = 0.1

[node name="SFXVolume" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 74.0
offset_top = 230.0
offset_right = 374.0
offset_bottom = 260.0
text = "SFX Volume"
label_settings = SubResource("LabelSettings_fmr27")
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/SFXVolume"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 217.0
offset_top = -8.0
offset_right = 419.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 10
max_value = 1.0
step = 0.1

[node name="CameraSmoothing" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 74.0
offset_top = 268.0
offset_right = 374.0
offset_bottom = 298.0
text = "Camera Smoothing"
label_settings = SubResource("LabelSettings_fmr27")
horizontal_alignment = 2
vertical_alignment = 1

[node name="CameraSmoothingSlider" type="HSlider" parent="Panel/CameraSmoothing"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 217.0
offset_top = -8.0
offset_right = 419.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 10
value = 50.0

[node name="ScreenBorder" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 74.0
offset_top = 306.0
offset_right = 374.0
offset_bottom = 336.0
text = "Display Screen Border"
label_settings = SubResource("LabelSettings_fmr27")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScreenBorderCheckBox" type="CheckBox" parent="Panel/ScreenBorder"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 363.0
offset_top = 3.0
offset_right = 387.0
offset_bottom = 27.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1tras")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1tras")
theme_override_styles/hover = SubResource("StyleBoxFlat_1tras")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_1tras")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s4d31")

[node name="ResetSaveData" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 137.0
offset_top = 430.0
offset_right = 323.0
offset_bottom = 459.0
text = "Reset Save Data"
label_settings = SubResource("LabelSettings_fmr27")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ResetSaveDataButton" type="Button" parent="Panel/ResetSaveData"]
layout_mode = 0
offset_left = 226.0
offset_right = 291.0
offset_bottom = 31.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_0hhht")
text = "DELETE"

[node name="ResetSaveDataConfirm" type="Button" parent="Panel/ResetSaveData"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 341.0
offset_right = 430.0
offset_bottom = 31.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_0hhht")
text = "CONFIRM?"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="value_changed" from="Panel/MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="Panel/SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="Panel/CameraSmoothing/CameraSmoothingSlider" to="." method="_on_camera_smoothing_slider_value_changed"]
[connection signal="toggled" from="Panel/ScreenBorder/ScreenBorderCheckBox" to="." method="_on_screen_border_check_box_toggled"]
[connection signal="pressed" from="Panel/ResetSaveData/ResetSaveDataButton" to="." method="_on_reset_save_data_button_pressed"]
[connection signal="pressed" from="Panel/ResetSaveData/ResetSaveDataConfirm" to="." method="_on_reset_save_data_confirm_pressed"]
